ci(test): add codecov
Signed-off-by: Alexej Disterhoft <alexej@disterhoft.de>

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -28,12 +28,12 @@ tasks:
   test:
     desc: Run test suite
     cmds:
-      - go test ./...
+      - go test ./... {{.CLI_ARGS}}
 
   test:integration:
     desc: Run integration tests
     cmds:
-      - go test -tags=integration ./integration/...
+      - go test -tags=integration ./integration/... {{.CLI_ARGS}}
 
   test:all:
     desc: Run all tests
