--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -5,6 +5,9 @@ env:
   CGO_ENABLED:
     sh: echo "{{ if eq OS "darwin" }}0{{ else }}1{{ end }}"
 
+vars:
+  BIN: "{{.ROOT_DIR}}/bin"
+
 tasks:
   default:
     cmds:
@@ -42,3 +45,21 @@ tasks:
     cmds:
       - task: test
       - task: test:integration
+
+  mockery:install:
+    desc: Install mockery
+    vars:
+      MOCKERY_VERSION: v2.32.4
+    env:
+      GOBIN: "{{.BIN}}"
+    status:
+      - go version -m {{.BIN}}/mockery | grep github.com/vektra/mockery | grep {{.MOCKERY_VERSION}}
+    cmds:
+      - go install github.com/vektra/mockery/v2@{{.MOCKERY_VERSION}}
+
+  mockery:generate:
+    desc: Generate mocks
+    deps:
+      - mockery:install
+    cmds:
+      - "{{.BIN}}/mockery"
