feat: implement heartbeat event handler
Signed-off-by: Alexej Disterhoft <alexej@disterhoft.de>

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -63,3 +63,9 @@ tasks:
       - mockery:install
     cmds:
       - "{{.BIN}}/mockery"
+
+  husky:pre-commit:
+    cmds:
+      - task: mockery:generate
+      - task: lint
+      - task: test
