test: add initial setup for integration tests
Signed-off-by: Alexej Disterhoft <alexej@disterhoft.de>

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -63,6 +63,10 @@ tasks:
       - mockery:install
     cmds:
       - "{{.BIN}}/mockery"
+    sources:
+      - pkg/**/*.go
+    generates:
+      - mocks/**/*.go
 
   husky:pre-commit:
     cmds:
