--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,3 +49,32 @@ jobs:
         uses: codecov/codecov-action@v3
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
+  integration:
+    name: integration
+    runs-on: ubuntu-latest
+
+    needs:
+      - golangci
+      - test
+
+    services:
+      dind:
+        image: docker:24.0-dind-rootless
+        ports:
+          - 2375:2375
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: "1.21"
+
+      - name: Setup Task
+        uses: arduino/setup-task@v1
+
+      - name: Test with Docker
+        run: task test:integration
