ci: run go mod explicitly before tests
Signed-off-by: Alexej Disterhoft <alexej@disterhoft.de>

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -46,6 +46,11 @@ tasks:
       - task: test
       - task: test:integration
 
+  mod:download:
+    desc: Download dependencies
+    cmds:
+      - go mod download
+
   mockery:install:
     desc: Install mockery
     vars:
