--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,6 +42,9 @@ jobs:
       - name: Setup Task
         uses: arduino/setup-task@v1
 
+      - name: Download go mod dependencies
+        run: task mod:download
+
       - name: Run tests
         run: task test -- -race -covermode=atomic -coverprofile coverage.out
 
@@ -75,6 +78,9 @@ jobs:
 
       - name: Setup Task
         uses: arduino/setup-task@v1
+
+      - name: Download go mod dependencies
+        run: task mod:download
 
       - name: Test with Docker
         run: task test:integration
