style: add some more linters, fix issues
Signed-off-by: Alexej Disterhoft <alexej@disterhoft.de>

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -8,9 +8,13 @@ run:
 
 linters:
   enable:
-    - goimports
+    - gocritic
     - gofmt
     - gofumpt
+    - goimports
+    - gosec
+    - misspell
+    - wsl
 
 linters-settings:
   gofmt:
