--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -64,6 +64,41 @@ jobs:
       - golangci
       - test
 
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: "1.21"
+
+      - name: Setup Task
+        uses: arduino/setup-task@v1
+        with:
+          version: "3.28.0"
+
+      - name: Download go mod dependencies
+        run: task mod:download
+
+      - name: Run tests
+        run: task test:integration -- -race -covermode=atomic -coverprofile coverage.out
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          flags: integration
+
+  e2e:
+    name: e2e
+    runs-on: ubuntu-latest
+
+    needs:
+      - golangci
+      - test
+      - integration
+
     services:
       dind:
         image: docker:24.0-dind-rootless
@@ -88,10 +123,10 @@ jobs:
         run: task mod:download
 
       - name: Test with Docker
-        run: task test:integration -- -race -covermode=atomic -coverprofile coverage.out -coverpkg ./...
+        run: task test:e2e -- -race -covermode=atomic -coverprofile coverage.out -coverpkg ./...
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          flags: integration
+          flags: e2e
